--- a/alaSDR.cabal
+++ b/alaSDR.cabal
@@ -16,9 +16,16 @@ build-type:          Simple
 cabal-version:       >=1.10
 
 library
-  exposed-modules:     AlaSDR.Modem.Analog.QuadratureDetector
+  exposed-modules:     AlaSDR.Modem.Analog.QuadratureDetector,
+                       AlaSDR.Src.ByteString
   -- other-modules:       
   -- other-extensions:    
-  build-depends:       base >=4.6 && <4.7, accelerate >=0.13 && <0.14, accelerate-fft >=0.13 && <0.14
+  build-depends:       base >=4.6 && <4.7,
+                       accelerate >=0.13 && <0.14,
+                       accelerate-fft >=0.13 && <0.14,
+                       bytestring >= 0.10.0.2,
+                       binary >= 0.5.1.1,
+                       data-binary-ieee754 >= 0.4.4
+
   -- hs-source-dirs:      
   default-language:    Haskell2010
